-added sonarqube project file for running sonar-scanner from the commandline -added plugins to pom.xml for determining code coverage (jacoco) for both unit and integration tests -you need to force unit tests to run with -DskipTests=false -added properties for sonarqube in pom.xml -added unit tests for SheriffSchedulerService which utilize Mockito -you can call sonar:sonar to publish build results to sonarqube, but make sure you run unit/integration tests first