@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>ca.bc.gov.jag.shuber</groupId>
-	<artifactId>shuber-persistence</artifactId>
+	<groupId>ca.bc.gov.jag.shersched</groupId>
+	<artifactId>shersched-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>Shuber Persistence and REST layer</name>
+	<name>Sheriff Scheduler Persistence and REST application</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -20,6 +20,9 @@
 		<!-- NOTE: override Spring version of 1.6 -->
 		<java.version>1.8</java.version>
 		
+		<!-- disable running of JUnit tests by default, override with -DskipTests=false -->
+		<skipTests>true</skipTests>
+		
 		<!-- JUnit 5 -->
 		<junit.jupiter.version>5.1.0</junit.jupiter.version>
 		<junit.vintage.version>5.1.0</junit.vintage.version>
@@ -27,6 +30,11 @@
 		
 		<!-- Main class for Spring Boot -->
 		<start-class>ca.bc.gov.jag.shuber.Application</start-class>
+		
+		<!-- Sonarqube properties -->
+		<sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
+		<sonar.jacoco.reportPaths>target/coverage-reports/jacoco-ut.exec, target/coverage-reports/jacoco-it.exec</sonar.jacoco.reportPaths>
+		<sonar.exclusions>**/persistence/model/*.java</sonar.exclusions>
 	</properties>
 
 	<dependencies>
@@ -147,17 +155,17 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-				</configuration>
+				</configuration>	
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-surefire-plugin</artifactId>
 			    	<!-- NOTE: newer version 2.20.1 has an issue and crashes -->
-					<version>2.19.1</version>
+				<version>2.19.1</version>
 			    <configuration>
-			    		<verbose>true</verbose>    		
-<!-- 	            	<forkMode>once</forkMode> -->
-<!-- 					<argline>-Xmx1024m -XX:MaxPermSize=500m</argline> -->
+			    		<verbose>true</verbose>
+			    		<argLine>${surefireArgLine}</argLine>
+			    		<skipTests>${skipTests}</skipTests>
 	            </configuration>
 			    <dependencies>
 			        <dependency>
@@ -171,6 +179,75 @@
 			            <version>${junit.jupiter.version}</version>
 			        </dependency>
 			    </dependencies>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <!-- NOTE: newer version 2.20.1 has an issue and crashes -->
+				<version>2.19.1</version>
+			    <executions>
+			        <execution>
+			            <id>integration-tests</id>
+			            <goals>
+			                <goal>integration-test</goal>
+			                <goal>verify</goal>
+			            </goals>
+			            <configuration>
+			                <argLine>${failsafeArgLine}</argLine>
+			                <skipTests>${skipTests}</skipTests>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.8.0</version>
+			    <executions>
+			        <execution>
+			            <id>pre-unit-test</id>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			            <configuration>
+			                <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+			                <propertyName>surefireArgLine</propertyName>
+			            </configuration>
+			        </execution>
+			        <execution>
+			            <id>post-unit-test</id>
+			            <phase>test</phase>
+			            <goals>
+			                <goal>report</goal>
+			            </goals>
+			            <configuration>
+			                <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+			                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+			            </configuration>
+			        </execution>
+			        <execution>
+			            <id>pre-integration-test</id>
+			            <phase>pre-integration-test</phase>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			            <configuration>
+			                <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+			                <propertyName>failsafeArgLine</propertyName>
+			            </configuration>
+			        </execution>
+			        <execution>
+			            <id>post-integration-test</id>
+			            <phase>post-integration-test</phase>
+			            <goals>
+			                <goal>report</goal>
+			            </goals>
+			            <configuration>
+			                <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
+			                <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+			            </configuration>
+			        </execution>
+			    </executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -197,4 +274,32 @@
 			<url>http://repo.spring.io/milestone</url>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	<profiles>
+		<profile>
+	        <id>java8</id>
+	        <activation>
+	            <jdk>8</jdk>
+	        </activation>
+	        <dependencies>
+	        		<!-- NOTE: java 8 includes JAXB by default. -->
+	        </dependencies>
+		</profile>
+	    <profile>
+	        <id>java9</id>
+	        <activation>
+	            <jdk>9</jdk>
+	        </activation>
+	        <dependencies>
+	        		<!-- NOTE: include JAXB for java 9 since it is a module and is excluded. -->
+		        	<dependency>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+					<version>2.3.0</version>
+					<scope>compile</scope>
+				</dependency>
+	        </dependencies>
+		</profile>
+	</profiles>
+	
 </project>
